Set Rails server to bind to all hosts and use dynamic port
Updated the development Procfile for flux, nexus, and synapse to bind the Rails server to 0.0.0.0 and use a configurable port defaulting to 3000. This ensures compatibility with containerized and external environments.

--- a/config/database.yml
+++ b/config/database.yml
@@ -22,12 +22,7 @@ default: &default
 
 development:
   <<: *default
-  database: cortex_development
-
-  # The specified database role being used to connect to PostgreSQL.
-  # To create additional roles in PostgreSQL see `$ createuser --help`.
-  # When left blank, PostgreSQL will use the default role. This is
-  # the same name as the operating system user running Rails.
+  url: <%= ENV.fetch("DATABASE_URL", "postgres://postgres:postgres@localhost:5432") %>/cortex_development
 
   # The password associated with the PostgreSQL role (username).
   #password:
